# kanban-terminal

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
kanban_terminal/: __init__.py  __main__.py  app.py  models.py  rendering.py  screens.py  storage.py
kanban_terminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_storage.py
