[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kanban-terminal"
version = "0.1.0"
description = "A colorful kanban board that runs inside the terminal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.61,<2.0",
]

[project.scripts]
kanban-terminal = "kanban_terminal.__main__:main"

[tool.setuptools.packages.find]
include = ["kanban_terminal*"]

